fleshes out introduction and Document Distance and Similarity section

--- a/_drafts/intro-doc-similarity-with-elasticsearch.ipynb
+++ b/_drafts/intro-doc-similarity-with-elasticsearch.ipynb
@@ -6,19 +6,33 @@
    "source": [
     "# Introduction to Document Similarity with Elasticsearch\n",
     "\n",
+    "In a text analytics context, document similarity relies on reimagining texts as points in space that can be close (similar) or different (far apart). However, it's not always a straightforward process to determine which document features should be encoded into a similarity measure (words/phrases? document length/structure?). Moreover, in practice it can be challenging to find a quick, efficient way of finding similar documents given some input document. In this post I'll explore some of the similarity tools implemented in Elasticsearch, which can enable us to augment search speed without having to sacrifice too much in the way of nuance.\n",
     "\n",
-    "## Document Distance\n",
-    "Short intro to document similarity - finding a way to represent the distance between documents. \n",
+    "## Document Distance and Similarity\n",
     "\n",
-    "Two things needed:\n",
-    " - The first is to encode the documents as vectors. There are options for this (one-hot, frequency, distributed). \n",
-    " - The second is to decide how to measure distance - Euclidean? Manhattan? Cosine? There are tradeoffs but cosine is a good place to start with text. Why? Documents encoded as vectors are sparse; each vector could be as long as the number of unique words across the full corpus.  That means that two documents of very different lengths (e.g. a single recipe and a cookbook), could be encoded with the same length vector, which might overemphasize the magnitude of the book's document vector at the expense of the recipe's document vector. Cosine distance helps to correct for variations in vector magnitudes resulting from uneven length documents, and enables us to measure the distance between the book and recipe.\n",
-    " \n",
-    "Document similarity is something we cover in the book - in chapter 6 and then in chapter 10 where we build a chatbot that, among other things, uses a nearest neigbor search to recommend recipes that are similar to the ingredients listed by the user. One of my observations during the prototyping phase for that chapter is how slow vanilla nearest neighbor search is. This led me to think about different ways to optimize the search, from using variations like k-ball, to using other Python libraries like Spotify's Annoy, and also to other kind of tools altogether that attempt to deliver a similar results as quickly as possible. Like ElasticSearch!\n",
-    " \n",
+    "In this post I'll be focusing mostly on getting started with Elasticsearch and comparing the built-in similarity measures currently implemented in ES. However, if you're new to the concept of document similarity, here's a quick overview.\n",
+    "\n",
+    "Essentially, to represent the distance between documents, we need two things: first, a way of encoding text as vectors, and second, a way of measuring distance.\n",
+    "\n",
+    " 1. The bag-of-words (BOW) model enables us to represent document similarity with respect to vocabulary and is easy to do. Some common options for BOW encoding include one-hot encoding, frequency encoding, TF-IDF, and distributed representations. \n",
+    " 2. How should we measure distance between documents in space? Euclidean distance is often where we start, but is not always the best choice for text. Documents encoded as vectors are sparse; each vector could be as long as the number of unique words across the full corpus.  That means that two documents of very different lengths (e.g. a single recipe and a cookbook), could be encoded with the same length vector, which might overemphasize the magnitude of the book's document vector at the expense of the recipe's document vector. Cosine distance helps to correct for variations in vector magnitudes resulting from uneven length documents, and enables us to measure the distance between the book and recipe.\n",
+    "\n",
+    "For more about vector encoding, you can check out Chapter 4 of [our book](https://www.amazon.com/Applied-Text-Analysis-Python-Language-Aware/dp/1491963042), and for more about different distance metrics check out Chapter 6. In Chapter 10, we prototype a kitchen chatbot that, among other things, uses a [nearest neigbor](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm) search to recommend recipes that are similar to the ingredients listed by the user. You can also poke around in the code for the book [here](https://github.com/foxbook/atap).\n",
+    "\n",
+    "One of my observations during the prototyping phase for that chapter is how slow vanilla nearest neighbor search is. This led me to think about different ways to optimize the search, from using variations like [ball tree](https://en.wikipedia.org/wiki/Ball_tree), to using other Python libraries like [Spotify's Annoy](https://github.com/spotify/annoy), and also to other kind of tools altogether that attempt to deliver a similar results as quickly as possible. Enter Elasticsearch..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What is Elasticsearch\n",
-    "Elasticsearch is a text search engine that leverages the information retrieval library Lucene together with a key-value store to ...\n",
+    "Elasticsearch is a text search engine that leverages the information retrieval library Lucene together with a key-value store to expose deep and rapid search functionalities. It is particularly useful for search text documents.\n",
     "\n",
+    "### Document Relevance\n",
+    "\n",
+    " \n",
+    " \n",
     "\n",
     "## Get the Sample Corpus\n",
     "The Yellowbrick machine learning visualization library hosts several datasets wrangled from the UCI Machine Learning Repository or built by District Data Labs to present the examples used throughout this documentation, one of which is a text corpus of news documents collected from different domain area RSS feeds. If you haven't downloaded the data, you can do so by running:\n",
@@ -989,11 +1003,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "If you want to change the default similarity after creating an index you must close your index, send the following request and open it again afterwards:\n",
+    "\n",
+    "```bash\n",
+    "curl -X POST \"localhost:9200/index/_close\"\n",
+    "curl -X PUT \"localhost:9200/index/_settings\" -H 'Content-Type: application/json' -d'\n",
+    "{\n",
+    "  \"index\": {\n",
+    "    \"similarity\": {\n",
+    "      \"default\": {\n",
+    "        \"type\": \"boolean\"\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "'\n",
+    "curl -X POST \"localhost:9200/index/_open\"\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
