progress on rdf post and some todos to finish up

--- a/_drafts/rdf-basics.ipynb
+++ b/_drafts/rdf-basics.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# RDF Basics\n",
     "\n",
-    "Use the Python library `rdflib` to build a product data graph and extract information about individual products.\n",
+    "The Resource Description Framework or RDF is a standard model for data interchange that allows structured and semi-structured data to be shared across different applications. RDF expresses relationships between entities as triples; essentially a graph that links unique URIs via edges that describe their relationship. In this post, we'll use the Python library `rdflib` to build a product data graph and extract information about those individual products.\n",
     "\n",
     "## About the Data\n",
     "The data used in this post can be found [here](http://data.dws.informatik.uni-mannheim.de/structureddata/2014-12/quads/ClassSpecificQuads/schemaorgProduct.nq.sample.txt). It comes from the [Web Data Commons project](http://www.webdatacommons.org/structureddata/2014-12/stats/schema_org_subsets.html), which extracts structured data describing products, people, organizations, places, and events from billions of web pages and make the extracted data available for download. In particular, we will be exploring the subset of the corpus that concerns products and product descriptions. "
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "'products.nq'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,6 +55,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the first 10 rows"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,18 +71,20 @@
     "\n",
     "The product data we'll be exploring is represented in RDF (Resource Description Framework) format. RDF is a directed, labeled graph data format for representing information in the Web. Resources are represented as nodes in the graph and identified by unique URIs. Edges represent the named link between two given resources. \n",
     "\n",
+    "![rdf data model](https://raw.githubusercontent.com/rebeccabilbro/rebeccabilbro.github.io/master/images/2018-07-02-rdf-graph.png)\n",
+    "\n",
     "RDF is an abstract model with several serialization formats that have different encodings. The variant we'll be dealing with is called N-Quad.\n",
     "\n",
     "### What is N-Quads?\n",
     "\n",
     "N-Quads is a line-based, plain text format for encoding an RDF dataset. In the data we'll be looking at, the forth element of each line contains the URL of the webpage from which the data was extracted.\n",
     "\n",
-    "In Python, we can use the `rdflib` library to build a graph structure from the product data we've downloaded:"
+    "In Python, we can use the `rdflib` library (which you can install via `pip`) to build a graph structure from the product data we've downloaded:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +104,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can explore the data using builtins and methods implemented in the `ConjunctiveGraph` class:\n",
+    "Now we can explore the data using classes and methods implemented `rdflib`:\n",
     "\n",
-    " - len(g)\n",
+    " - URIRef\n",
+    " - BNode\n",
     " - g.subjects()\n",
     " - g.triples()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,21 +123,32 @@
        "4983"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Count the nodes\n",
+    "# First, count the nodes\n",
     "len(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "216"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from rdflib import URIRef\n",
     "\n",
@@ -136,32 +159,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "rdflib.term.BNode('N04f8729ef3304e3db4503725781ce2a7')"
+       "rdflib.term.BNode('N34274ef79f704df1b2327c5630ca18b1')"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "product_list[0]"
+    "product_list[0] # `BNode` is a blank node"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rdflib import BNode\n",
-    "\n",
+    "# print out the first 10 products"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we'll convert our graph into a dictionary representation, so that each product is represented as a key and the values correspond to the product details contained in the graph. This will allow us to index the documents in a document store like MongoDB or Elasticsearch to enable search in the context of an application."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "uid_data = {\"name\"    : None,\n",
     "            \"image\"   : None,\n",
     "            \"url\"     : None,\n",
@@ -189,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
