adds reviews to product dict in rdf post

--- a/_drafts/rdf-basics.ipynb
+++ b/_drafts/rdf-basics.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4983"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10256,7 +10256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -10265,7 +10265,7 @@
        "216"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10276,6 +10276,15 @@
     "# get all the unique products\n",
     "product_list = list(set(g.subjects(object=URIRef(\"http://schema.org/Product\"))))\n",
     "len(product_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_list = list(set(g.subjects(object=URIRef(\"http://schema.org/Product\"))))"
    ]
   },
   {
@@ -10291,7 +10300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10326,40 +10335,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "product_dict = dict()\n",
     "\n",
+    "# Seed each product node's value dict with the necessary fields\n",
     "for product in product_list:\n",
+    "    product_dict[str(product)] = {\"name\"    : None,\n",
+    "                                  \"image\"   : None,\n",
+    "                                  \"url\"     : None,\n",
+    "                                  \"desc\"    : None,\n",
+    "                                  \"sku\"     : None,\n",
+    "                                  \"review\"  : None,\n",
+    "                                  \"manu\"    : None,\n",
+    "                                  \"reviews\" : None,\n",
+    "                                  \"prod_id\" : None,\n",
+    "                                  \"mod_date\": None,\n",
+    "                                  \"rel_date\": None,\n",
+    "                                  \"brand\"   : None,\n",
+    "                                  \"model\"   : None,\n",
+    "                                  \"offers\"  : None,\n",
+    "                                  \"thumb\"   : None,\n",
+    "                                  \"logo\"    : None,\n",
+    "                                  \"rating\"  : None}\n",
+    "    \n",
+    "    # for each node in the graph that describes a product relationship\n",
     "    for bnode, linkage, detail, product_uri in g.quads( (product, None, None, None) ): \n",
-    "        if str(linkage) in PRODUCT_FIELDS.values():\n",
-    "            if bnode not in product_dict.keys():\n",
-    "                product_dict[str(bnode)] = {'bnode':str(bnode)}\n",
-    "                bnode_data = {\"name\"    : None,\n",
-    "                              \"image\"   : None,\n",
-    "                              \"url\"     : None,\n",
-    "                              \"desc\"    : None,\n",
-    "                              \"sku\"     : None,\n",
-    "                              \"review\"  : None,\n",
-    "                              \"manu\"    : None,\n",
-    "                              \"reviews\" : None,\n",
-    "                              \"prod_id\" : None,\n",
-    "                              \"mod_date\": None,\n",
-    "                              \"rel_date\": None,\n",
-    "                              \"brand\"   : None,\n",
-    "                              \"model\"   : None,\n",
-    "                              \"offers\"  : None,\n",
-    "                              \"thumb\"   : None,\n",
-    "                              \"logo\"    : None,\n",
-    "                              \"rating\"  : None}\n",
-    "                product_dict[str(bnode)].update(bnode_data)\n",
-    "                for field_type, schema in PRODUCT_FIELDS.items(): \n",
-    "                    if str(linkage) == schema:\n",
-    "                        bnode_data[field_type] = str(detail)\n",
-    "\n",
-    "                    product_dict[str(bnode)].update(bnode_data)"
+    "        # for each mapping in our PRODUCT_FIELDS dictionary\n",
+    "        for field_type, schema in PRODUCT_FIELDS.items():\n",
+    "            # if the node's linkage matches the schema\n",
+    "            if str(linkage) == schema:\n",
+    "                # update the appropriate dict value for the key in our product_dict\n",
+    "                product_dict[str(bnode)][field_type] = str(detail)\n"
    ]
   },
   {
@@ -10371,28 +10380,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N4e1bd4624ffe4b93a9bef8164cd139f6\n",
-      "{'bnode': 'N4e1bd4624ffe4b93a9bef8164cd139f6',\n",
-      " 'brand': None,\n",
+      "N63ea7a2c39334851ab268c516d1a5b38\n",
+      "{'brand': None,\n",
       " 'desc': None,\n",
-      " 'image': None,\n",
+      " 'image': 'http://ii.alatest.com/product/190x190/3/9/DeLonghi-4-10-D091549EFS-0.jpg',\n",
       " 'logo': None,\n",
       " 'manu': None,\n",
       " 'mod_date': None,\n",
       " 'model': None,\n",
-      " 'name': None,\n",
+      " 'name': 'DeLonghi 4 Slice Toaster Oven Stainless',\n",
       " 'offers': None,\n",
       " 'prod_id': None,\n",
       " 'rating': None,\n",
       " 'rel_date': None,\n",
-      " 'review': 'N8717bf6252d64d74acf056ca08fdef2d',\n",
+      " 'review': 'Nd40751819df24bf1901c01be603abc61',\n",
       " 'reviews': None,\n",
       " 'sku': None,\n",
       " 'thumb': None,\n",
@@ -10406,8 +10414,62 @@
     "for key, val in product_dict.items():\n",
     "    print(key)\n",
     "    pprint(val)\n",
+    "    break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N63ea7a2c39334851ab268c516d1a5b38\n",
+      "{'brand': None,\n",
+      " 'desc': None,\n",
+      " 'image': 'http://ii.alatest.com/product/190x190/3/9/DeLonghi-4-10-D091549EFS-0.jpg',\n",
+      " 'logo': None,\n",
+      " 'manu': None,\n",
+      " 'mod_date': None,\n",
+      " 'model': None,\n",
+      " 'name': 'DeLonghi 4 Slice Toaster Oven Stainless',\n",
+      " 'offers': None,\n",
+      " 'prod_id': None,\n",
+      " 'rating': None,\n",
+      " 'rel_date': None,\n",
+      " 'review': 'Substantial modern toaster that works well and is a great value. '\n",
+      "           'We needed a 4 slicer since my husband has 2 waffles and I have 1 '\n",
+      "           \"our old toaster was only 2 slices so we couldn't have hot waffles \"\n",
+      "           \"at the same time.Don't know what took me so long to get...\",\n",
+      " 'reviews': None,\n",
+      " 'sku': None,\n",
+      " 'thumb': None,\n",
+      " 'url': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "review_text = URIRef(\"http://schema.org/Review/description\")\n",
+    "\n",
+    "for product, val_dict in product_dict.items():\n",
+    "    for bnode, linkage, detail, product_uri in g.quads( (None, review_text, None, None) ): \n",
+    "        if val_dict['review'] == str(bnode):\n",
+    "            val_dict['review'] = str(detail)\n",
+    "\n",
+    "for key, val in product_dict.items():\n",
+    "    print(key)\n",
+    "    pprint(val)\n",
     "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -10426,7 +10488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
